<resources>
    <string name="app_name">My Application</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="regiser">注册</string>
    <string name="email">邮箱</string>
    <string name="phone">手机号码</string>
</resources>
